resources/css/mobile/nav.css
nav {
    background: #337ab7;
    border: 1px solid #eee;
    border-top: none;
    border-left: none;
    border-right: none;
    margin: 0;
    padding: 0;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1;

    /*
    height: 100%;
    margin: 0;
    padding: 0;
    width: 100%;
    */

}

div p {
    color: #fff;
    font-size: 1.4em;
    display: inline-block;
    margin-left: 20px;
    vertical-align: middle;
}

div > a {
    float: right;
    margin: 20px;
}

div a img {
    border-radius: 20px;
}

/* The drop-down menu. */
div + div {
    border-top: 1px solid #ccc;
    clear: both;
}

ul {
    list-style: none;
    margin: 0;
    overflow: hidden;
    padding: 0;
}

nav a {
    color: #fff;
    text-decoration: none;
}

nav li:hover {
    background-color: #265a88;
}

nav li a {
    display: block;
    font-size: 1em;
    padding: 20px;
}

/* Highlight the link of the current page. */
#home nav li a[href="/"],
#animals nav li a[href*="animals"],
#contact nav li a[href*="contact"],
#history nav li a[href*="history"],
#market nav li a[href*="market"] {
    background: #265a88;
}

